Salesforce Training org/objects/Flow_Exception__c.object
<CustomObject>
    <fields>
        <fullName>Element_Category__c</fullName>
        <description>Field to hold the Element Category details for which the fault occurred</description>
        <inlineHelpText>Field to hold the Element Category details for which the fault occurred</inlineHelpText>
        <label>Element Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Element_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Element_Name__c</fullName>
        <description>Field to have element name details for which flow exception occurs.</description>
        <inlineHelpText>Field to have element name details for which flow exception occurs.</inlineHelpText>
        <label>Element Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception_Message__c</fullName>
        <description>Field to have Flow exception message details.</description>
        <inlineHelpText>Field to have Flow exception message details.</inlineHelpText>
        <label>Exception Message</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Flow_Name__c</fullName>
        <description>Field to have flow name details for which exception occurs.</description>
        <inlineHelpText>Field to have flow name details for which exception occurs.</inlineHelpText>
        <label>Flow Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logged_In_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to hold the logged in user details for which the fault occurred.</description>
        <inlineHelpText>Field to hold the logged in user details for which the fault occurred</inlineHelpText>
        <label>Logged In User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Flow_Exceptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <description>Field to have Object API Name details for which flow executed for.</description>
        <inlineHelpText>Field to have Object API Name details for which flow executed for.</inlineHelpText>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originating_Flow_Element_Category__c</fullName>
        <description>In case an error occurs while performing logic in a sub flow, this field will help us to track the name of &quot;Originating Flow Element Category&quot;.</description>
        <inlineHelpText>In case an error occurs while performing logic in a sub flow, this field will help us to track the name of &quot;Originating Flow Element Category&quot;.</inlineHelpText>
        <label>Originating Flow Element Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originating_Flow_Element_Name__c</fullName>
        <description>In case an error occurs while performing logic in a sub flow, this field will help us to track the name of &quot;Originating Flow Element Name&quot;.</description>
        <inlineHelpText>In case an error occurs while performing logic in a sub flow, this field will help us to track the name of &quot;Originating Flow Element Name&quot;.</inlineHelpText>
        <label>Originating Flow Element Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originating_Flow_Exception_Message__c</fullName>
        <description>In case an error occurs while performing logic in a sub flow, this field will help us to track the name of &quot;Originating Flow Exception Message&quot;.</description>
        <inlineHelpText>In case an error occurs while performing logic in a sub flow, this field will help us to track the name of &quot;Originating Flow Exception Message&quot;.</inlineHelpText>
        <label>Originating Flow Exception Message</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Originating_Flow_Name__c</fullName>
        <description>In case an error occurs while performing logic in a sub flow, this field will help us to track the name of &quot;Originating Flow Name&quot;.</description>
        <inlineHelpText>In case an error occurs while performing logic in a sub flow, this field will help us to track the name of &quot;Originating Flow Name&quot;.</inlineHelpText>
        <label>Originating Flow Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originating_Flow_Object_API_Name__c</fullName>
        <description>In case an error occurs while performing logic in a sub flow, this field will help us to track the name of &quot;Originating Flow Object API Name&quot;.</description>
        <inlineHelpText>In case an error occurs while performing logic in a sub flow, this field will help us to track the name of &quot;Originating Flow Object API Name&quot;.</inlineHelpText>
        <label>Originating Flow Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originating_Record_ID__c</fullName>
        <description>In case an error occurs while performing logic in a sub flow, this field will help us to track the name of &quot;Originating Flow Record ID&quot;.</description>
        <inlineHelpText>In case an error occurs while performing logic in a sub flow, this field will help us to track the name of &quot;Originating Flow Record ID&quot;.</inlineHelpText>
        <label>Originating Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originating_Record_Name__c</fullName>
        <label>Originating Record Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_ID__c</fullName>
        <description>Field to have Record ID details for which flow executed for.</description>
        <inlineHelpText>Field to have Record ID details for which flow executed for.</inlineHelpText>
        <label>Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Name__c</fullName>
        <label>Record Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Flow Exception</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Originating_Flow_Name__c</columns>
        <columns>Flow_Name__c</columns>
        <columns>Object_API_Name__c</columns>
        <columns>Element_Name__c</columns>
        <columns>Element_Category__c</columns>
        <columns>Logged_In_User__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Exception_Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FE-{00000}</displayFormat>
        <label>Flow Exception Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flow Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>VR_Fields_Requiredness</fullName>
        <active>false</active>
        <description>Validation rule check fields for the required-ness for the data validation prospective while creation and updation of &quot;Flow Exception&quot; object record(s).</description>
        <errorConditionFormula>AND 
   (
   	ISBLANK(Originating_Flow_Name__c),
   	OR
   	(
   		ISPICKVAL(Element_Category__c, &apos;&apos;),
   		ISBLANK(Element_Name__c),
   		LEN(Exception_Message__c) = 0,
   		ISBLANK(Flow_Name__c),
   		ISBLANK(Logged_In_User__c),
   		ISBLANK(Object_API_Name__c),
   		ISBLANK(Record_ID__c)
   	)
)</errorConditionFormula>
        <errorMessage>Please have a value for &quot;Element Category, Element Name, Exception Message, Flow Name, Logged In User, Object API Name, Record ID&quot; fields when &quot;Originating Flow Name&quot; is blank.</errorMessage>
    </validationRules>
</CustomObject>